--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "express": "^4.17.2",
     "jquery": "^3.6.0",
     "path": "^0.12.7",
