--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.co.gymfrontendmobile.app",
-	"appName": "gym-frontend-mobile",
+	"appName": "GymUp",
 	"webDir": "dist/gym-frontend-mobile",
 	"bundledWebRuntime": false
 }
